# spawnd

./: .containerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Containerfile  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  test-plan.yaml
.claude/plans/: gleaming-cuddling-pike.md
deploy/container/: git-askpass.sh  otel-collector.yml
deploy/podman/: down.sh  up.sh
deploy/templates/: contributor.yaml
docker/: git-askpass.sh
docs/: deployed-observability-schema.md  deployment.md  greenfield-deployed-migration-plan.md
docs/audits/: 2026-06-07-unattended-readiness.md  2026-06-08-unattended-readiness-revalidation.md
docs/runbooks/: deployed-proof-2026-06-09.md
routines/: SCANNER.md
spawnd/: __init__.py  api.py  cli.py  roles.py  server.py
spawnd/artifacts/: redaction.py  store.py
spawnd/config/: __init__.py
spawnd/coordination/: redis.py
spawnd/core/: budget.py  deps.py
spawnd/gitops/: conflict_strategy.py  merge.py  worktrees.py
spawnd/io/: parser.py  plan_builder.py  templates.py  validation.py
spawnd/migrations/: __init__.py  env.py
spawnd/migrations/snapshots/: __init__.py  deployed_backend_0001.py
spawnd/migrations/versions/: 0001_deployed_backend.py  0002_unattended_readiness.py
spawnd/models/: __init__.py  specs.py  state.py
spawnd/notifications/: __init__.py  webhook.py
spawnd/observability/: telemetry.py
spawnd/policy/: __init__.py  commands.py  isolation.py
spawnd/runtime/: agent_config.py  agent_run.py  agent_state.py  executor.py  observer.py  run_state.py  scheduler.py  task_registry.py
spawnd/runtime/executors/: __init__.py  base.py  claude.py  codex.py  openai.py  refs.py
spawnd/runtime/policies/: __init__.py  budget.py  circuit_breaker.py  failure.py  stuck.py
spawnd/state/: repository.py  submission.py
spawnd/storage/: db.py  logs.py  paths.py  repository.py
spawnd/tools/: __init__.py  coord.py  factory.py  factory_openai.py  manager.py  mcp.py  openai_code.py  toolset.py  worker.py
spawnd/triggers/: __init__.py  github.py
spawnd/workers/: worker.py
tests/: __init__.py  conftest.py  deployed_helpers.py  helpers.py  test_agent_run.py  test_api.py  test_backend_config_redaction.py  test_cli.py  test_codex_executor.py  test_command_policy.py  test_conflict_strategy.py  test_db.py  test_deployed_coordination_artifacts.py  test_deployed_repository.py  test_deployed_telemetry.py  test_deployed_worker.py  test_deps.py  test_executor.py  test_executor_registry.py  test_git.py  test_github_triggers.py  test_manager_tools.py  test_merge.py  test_migrations.py  test_notifications.py  test_openai_executor.py  test_parser.py  test_pr_body.py  test_redis_coordination.py  test_roles.py  test_runtime_architecture.py  test_runtime_capabilities.py  test_runtime_isolation.py  test_runtime_policies.py  test_scheduler.py  test_server.py  test_tools.py
tests/sdklive/: test_sdk_client.py  test_sdk_final.py  test_sdk_integration.py  test_sdk_live.py  test_sdk_requirements.py  test_sdk_streaming.py
