[project]
name = "spawnd.dev"
version = "0.1.0"
description = "Multi-agent orchestration framework for coding agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.1.19",
]
openai = [
    "openai-agents>=0.6",
    "openai>=1.50",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "claude-agent-sdk>=0.1.19",
    "openai-agents>=0.6",
    "openai>=1.50",
]

[project.scripts]
spawnd = "spawnd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spawnd"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
pythonPlatform = "All"
include = ["."]
exclude = ["venv", ".venv", ".spawnd", ".swarm"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
reportMissingTypeArgument = false
reportUntypedFunctionDecorator = false
