[project]
name = "spawnd.dev"
version = "0.1.0"
description = "Multi-agent orchestration framework for coding agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk>=0.1.19",
]
openai = [
    "openai-agents>=0.6",
    "openai>=1.50",
]
codex = [
    "openai-codex>=0.1.0b2",
    "fastmcp>=2.14",
]
deployed = [
    "alembic>=1.13",
    "boto3>=1.34",
    "fastapi>=0.115",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "uvicorn[standard]>=0.30",
]
telemetry = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "alembic>=1.13",
    "claude-agent-sdk>=0.1.19",
    "boto3>=1.34",
    "fastapi>=0.115",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "uvicorn[standard]>=0.30",
    "openai-agents>=0.6",
    "openai>=1.50",
    "openai-codex>=0.1.0b2",
    "fastmcp>=2.14",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.scripts]
spawnd = "spawnd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spawnd"]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
pythonPlatform = "All"
include = ["spawnd", "tests"]
exclude = ["venv", ".venv", ".spawnd", ".swarm", "tests/sdklive"]
reportMissingImports = "error"
reportMissingTypeStubs = "none"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnusedCallResult = "warning"
reportUnusedParameter = "none"
reportMissingParameterType = "none"
reportAny = "none"
reportPrivateUsage = "none"
reportImplicitStringConcatenation = "none"
reportDeprecated = "none"
